--- a/simulations/geometryXVx/sheath/CMakeLists.txt
+++ b/simulations/geometryXVx/sheath/CMakeLists.txt
@@ -8,15 +8,15 @@ target_link_libraries(sheath_${GEOMETRY_VARIANT}
   PUBLIC
   DDC::DDC
   DDC::PDI_Wrapper
-  vcx::initialization_${GEOMETRY_VARIANT}
-  vcx::interpolation
-  vcx::poisson_${GEOMETRY_VARIANT}
-  vcx::time_integration_${GEOMETRY_VARIANT}
-  vcx::speciesinfo
-  vcx::boltzmann_${GEOMETRY_VARIANT}
-  vcx::advection
-  vcx::paraconfpp
-  vcx::rhs_${GEOMETRY_VARIANT}
+  gslx::initialization_${GEOMETRY_VARIANT}
+  gslx::interpolation
+  gslx::poisson_${GEOMETRY_VARIANT}
+  gslx::time_integration_${GEOMETRY_VARIANT}
+  gslx::speciesinfo
+  gslx::boltzmann_${GEOMETRY_VARIANT}
+  gslx::advection
+  gslx::paraconfpp
+  gslx::rhs_${GEOMETRY_VARIANT}
   PDI::pdi
   paraconf::paraconf
   sll::splines
