--- a/src/geometryXYVxVy/geometry/CMakeLists.txt
+++ b/src/geometryXYVxVy/geometry/CMakeLists.txt
@@ -10,6 +10,6 @@ target_include_directories("geometry_xyvxvy"
 target_link_libraries("geometry_xyvxvy" INTERFACE
     DDC::DDC
     sll::splines
-    vcx::speciesinfo
+    gslx::speciesinfo
 )
-add_library("vcx::geometry_xyvxvy" ALIAS "geometry_xyvxvy")
+add_library("gslx::geometry_xyvxvy" ALIAS "geometry_xyvxvy")
