--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ target_compile_features(unit_tests_common PUBLIC cxx_std_17)
 target_link_libraries(unit_tests_common
     PUBLIC
         GTest::gmock
-        vcx::speciesinfo
+        gslx::speciesinfo
 )
 
 gtest_discover_tests(unit_tests_common)
