--- a/tests/geometryXVx/bump_on_tail/CMakeLists.txt
+++ b/tests/geometryXVx/bump_on_tail/CMakeLists.txt
@@ -12,6 +12,13 @@ add_test(NAME TestSimulationBumpontailFFT
         "fft")
 set_property(TEST TestSimulationBumpontailFFT PROPERTY TIMEOUT 200)
 
+add_test(NAME TestSimulationBumpontailRestartFFT_XVx
+    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
+        "${PROJECT_SOURCE_DIR}"
+        "$<TARGET_FILE:bumpontail_fft>"
+        "restart")
+set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY TIMEOUT 200)
+
 add_test(NAME TestSimulationBumpontailFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail.sh"
         "${PROJECT_SOURCE_DIR}"
@@ -19,3 +26,10 @@ add_test(NAME TestSimulationBumpontailFemUniform_xperiod_vx
         "$<TARGET_FILE:Python3::Interpreter>"
         "fem")
 set_property(TEST TestSimulationBumpontailFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
+
+add_test(NAME TestSimulationBumpontailRestartFemUniform_xperiod_vx
+    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
+        "${PROJECT_SOURCE_DIR}"
+        "$<TARGET_FILE:bumpontail_fem_uniform_xperiod_vx>"
+        "restart")
+set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
