--- a/tests/geometryXVx/landau/CMakeLists.txt
+++ b/tests/geometryXVx/landau/CMakeLists.txt
@@ -12,6 +12,13 @@ add_test(NAME TestSimulationLandauFFT_XVx
         "fft")
 set_property(TEST TestSimulationLandauFFT_XVx PROPERTY TIMEOUT 200)
 
+add_test(NAME TestSimulationLandauRestartFFT_XVx
+    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
+        "${PROJECT_SOURCE_DIR}"
+        "$<TARGET_FILE:landau_fft>"
+        "restart")
+set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY TIMEOUT 200)
+
 add_test(NAME TestSimulationLandauFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau.sh"
         "${PROJECT_SOURCE_DIR}"
@@ -19,3 +26,10 @@ add_test(NAME TestSimulationLandauFemUniform_xperiod_vx
         "$<TARGET_FILE:Python3::Interpreter>"
         "fem")
 set_property(TEST TestSimulationLandauFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
+
+add_test(NAME TestSimulationLandauRestartFemUniform_xperiod_vx
+    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
+        "${PROJECT_SOURCE_DIR}"
+        "$<TARGET_FILE:landau_fem_uniform_xperiod_vx>"
+        "restart")
+set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
