--- a/src/geometryXVx/initialization/CMakeLists.txt
+++ b/src/geometryXVx/initialization/CMakeLists.txt
@@ -5,6 +5,7 @@ foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 add_library("initialization_${GEOMETRY_VARIANT}" STATIC
     maxwellianequilibrium.cpp
     bumpontailequilibrium.cpp
+    restartinitialization.cpp
     singlemodeperturbinitialization.cpp
 )
 
@@ -20,6 +21,7 @@ target_include_directories("initialization_${GEOMETRY_VARIANT}"
 target_link_libraries("initialization_${GEOMETRY_VARIANT}"
     PUBLIC
         DDC::DDC
+        DDC::PDI_Wrapper
         gslx::speciesinfo
         gslx::geometry_${GEOMETRY_VARIANT}
         gslx::utils
