--- a/tests/geometryXVx/CMakeLists.txt
+++ b/tests/geometryXVx/CMakeLists.txt
@@ -39,10 +39,31 @@ gtest_discover_tests(unit_tests_${GEOMETRY_VARIANT}
 
 endforeach()
 
+add_executable(unit_tests_lagrange
+lagrange_test.cpp
+    ../main.cpp
+)
+
+target_compile_features(unit_tests_lagrange PUBLIC cxx_std_17)
+target_link_libraries(unit_tests_lagrange 
+    PUBLIC
+        GTest::gtest
+        GTest::gmock
+        gslx::interpolation
+
+)
+gtest_discover_tests(unit_tests_lagrange 
+    TEST_SUFFIX "_${lagrange}")
+
+
+
+
 target_sources(unit_tests_xperiod_vx
     PRIVATE
         femperiodicpoissonsolver.cpp
+        fftpoissonsolver.cpp     
 )
+
 
 target_sources(unit_tests_xnonperiod_vx PRIVATE femnonperiodicpoissonsolver.cpp)
 
