4. Add polar advection operator
Add polar advection operator.

Define:

* BslAdvectionRP
* FootFinder
* IAdvectionRP
* AdvectionDomain
* AdvectionDomainPhysical
* AdvectionDomainPseudoCartesian
* tests/geometryRTheta/advection_2d_rp/ folder.
* restrict_to_domain()

--- a/tests/geometryRTheta/CMakeLists.txt
+++ b/tests/geometryRTheta/CMakeLists.txt
@@ -3,3 +3,4 @@
 add_subdirectory(polar_poisson)
 add_subdirectory(2d_spline_interpolator)
 add_subdirectory(quadrature)
+add_subdirectory(advection_2d_rp)
