5. Add another operator() of PoissonSolver + electric field for the diocotron simulation
Add:

- VlasovPoissonSolver: solves Poisson equation and computes electric field in XY;
- PoissonRHSFunction: creates a spline of the RHS and returns its values at a coordinate;
- test files for VlasovPoissonSolver;
README.md in src/geometryRTheta/polar_poisson/ and tests/geometryRTheta/polar_poisson/ folders.

Modify:
- PolarSplineFEMPoissonSolver: add an operator() which returns the B-splines coefficients of the solution, and removes the template of the class.

--- a/src/geometryRTheta/poisson/CMakeLists.txt
+++ b/src/geometryRTheta/poisson/CMakeLists.txt
@@ -1,24 +1,18 @@
 # SPDX-License-Identifier: MIT
 
-add_library("poisson_RTheta" STATIC
-    nullpoissonsolver.cpp
-)
 
-target_compile_features("poisson_RTheta"
-    PUBLIC
-        cxx_std_17
+add_library(poisson_RTheta INTERFACE)
+target_include_directories(poisson_RTheta
+    INTERFACE
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-
-target_include_directories("poisson_RTheta"
-    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
-)
-
-target_link_libraries("poisson_RTheta"
-    PUBLIC
+target_link_libraries(poisson_RTheta INTERFACE
         DDC::DDC
         sll::splines
         gslx::geometry_RTheta
         gslx::speciesinfo
+        gslx::utils
+        gslx::interpolation_2D_rp
 )
 
 add_library("gslx::poisson_RTheta" ALIAS "poisson_RTheta")
