--- a/src/geometryRTheta/CMakeLists.txt
+++ b/src/geometryRTheta/CMakeLists.txt
@@ -2,9 +2,11 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_subdirectory(poisson)
-add_subdirectory(geometry)
-add_subdirectory(interpolation)
 add_subdirectory(advection)
+add_subdirectory(geometry)
+add_subdirectory(initialization)
+add_subdirectory(interpolation)
+add_subdirectory(poisson)
+add_subdirectory(time_solver)
 
 
