--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,113 +1,82 @@
+
+include:
+  - local: 'ci_tools/reusable_ci_jobs.yml'
+
 cmake_tests:
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      changes:
-        - vendor/sll/**/*
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      variables:
-        SLL_BUILD_TESTING: "OFF"
-  stage: test
-  needs: []
+  extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env
   timeout: 2 hours
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-    SLL_BUILD_TESTING: "ON"
   script: |
+    set -x
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
     rm -rf build || true
     mkdir build
     cd build
-    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
+    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON $GENERAL_CMAKE_OPTIONS ..
     make -j 4
     ctest -j 2 --output-on-failure --timeout 5 -LE test_on_Release_only --output-junit tests.xml
   artifacts:
     when: always
+    expire_in: 1 day
     reports:
       junit: ./build/tests.xml
+
 cmake_tests_Release:
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      changes:
-        - vendor/sll/**/*
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      variables:
-        SLL_BUILD_TESTING: "OFF"
-  stage: test
-  needs: []
+  extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env
-  timeout: 2 hours
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-    SLL_BUILD_TESTING: "ON"
   script: |
-    set -e
+    set -x
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
     rm -rf build || true
     mkdir build
     cd build
-    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 ..
+    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release $GENERAL_CMAKE_OPTIONS ..
     make -j 4
     ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
     ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
     ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
   artifacts:
     when: always
+    expire_in: 1 day
     paths:
       - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
       - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
     reports:
       junit: ./build/tests.xml
+
 cmake_tests_Release_GPU:
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      changes:
-        - vendor/sll/**/*
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      variables:
-        SLL_BUILD_TESTING: "OFF"
+  extends: .cmake_tests
   tags:
     - persee
-  stage: test
-  needs: []
-  timeout: 2 hours
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-    SLL_BUILD_TESTING: "ON"
   before_script: |
     . /data/gyselarunner/spack-0.20.0/share/spack/setup-env.sh
     spack load gcc@11
     spack env activate voicexx-env-omp-cuda
   script: |
-    set -e
+    set -x
+    export OMP_PROC_BIND=spread
+    export OMP_PLACES=threads
+    export OMP_NUM_THREADS=8
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
     rm -rf build || true
     mkdir build
     cd build
-    cmake -DCMAKE_CXX_COMPILER=${CI_PROJECT_DIR}/vendor/kokkos/bin/nvcc_wrapper -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare -Xcudafe --diag_suppress=unsigned_compare_with_zero -Xcudafe --diag_suppress=integer_sign_change" -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 -DKokkos_ARCH_VOLTA70=ON -DKokkos_ENABLE_SERIAL=ON -DKokkos_ENABLE_OPENMP=ON -DKokkos_ENABLE_CUDA=ON ../
+    cmake -DCMAKE_CXX_COMPILER=${CI_PROJECT_DIR}/vendor/kokkos/bin/nvcc_wrapper \
+          -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare -Xcudafe --diag_suppress=unsigned_compare_with_zero -Xcudafe --diag_suppress=integer_sign_change" \
+          -DCMAKE_BUILD_TYPE=Release $GENERAL_CMAKE_OPTIONS -DKokkos_ARCH_VOLTA70=ON -DKokkos_ENABLE_SERIAL=ON -DKokkos_ENABLE_OPENMP=ON -DKokkos_ENABLE_CUDA=ON ..
     make -j 8
-    export OMP_PROC_BIND=spread
-    export OMP_PLACES=threads
-    export OMP_NUM_THREADS=8
     ctest --output-on-failure --timeout 5 --output-junit tests.xml -LE ResultsNotTested
     ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
     ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
   artifacts:
     when: always
+    expire_in: 1 day
     paths:
       - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
       - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
     reports:
       junit: ./build/tests.xml
+
 indentation:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -144,6 +113,7 @@ python_best_practices:
     for f in $(git diff origin/main --name-only); do grep $f post_process_errors.txt || true; done | tee filtered_errors.txt
     # Raise an error if post-process in filtered errors
     ! grep "post-process" filtered_errors.txt >/dev/null
+
 public_mirror:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
