--- a/.github/workflows/pull_request_tests.yml
+++ b/.github/workflows/pull_request_tests.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   Indentation:
     name: Clang Formatting Check
+    runs-on: ubuntu-latest
     container: ghcr.io/gyselax/gyselalibxx_env
     steps:
       - uses: actions/checkout@v3
